fix(migration): support Oracle LOB loading and crash recovery
Prove owner-scoped Oracle discovery visibility and preserve bounded BLOB/CLOB values through transformation, checksums, loading, verification, and recovery. Add real Oracle/PostgreSQL workflow and 128 MiB JVM crash integration coverage while retaining UNVERIFIED public commit restrictions.

Validation: latest results across the full run and focused recovery rerun are 491 passed and 2 Windows symlink skips; the full run had 2 timeouts that passed on rerun. Compile, packaging, 30 contract tests, and 136 documentation links were checked. A single full-suite green run was not obtained.